// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox is extendable by CheckboxControl face 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: rgb(209,209,209);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-transition: all 150ms;
  transition: all 150ms;
  border-color: rgb(0,0,255);
  border-radius: 3px;
  border-style: solid;
  border-width: 2px;
  margin-right: 8px;
}

.emotion-2[data-checked="true"] {
  background-color: light-blue;
  color: rgb(255,255,255);
  border-color: light-blue;
}

.emotion-2[data-checked="true"] > svg {
  visibility: visible;
}

.emotion-2[data-checked="false"] > svg {
  visibility: hidden;
}

.emotion-2[data-invalid="true"] {
  border-color: rgb(255,0,0);
}

.emotion-2[data-invalid="true"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(255,0,0);
}

.emotion-2[data-invalid="false"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(0,0,255);
}

.emotion-1 {
  width: 1em;
  height: 1em;
  stroke: rgb(209,209,209);
  stroke-width: 2px;
  fill: none;
}

.emotion-3 {
  font-size: inherit;
  line-height: inherit;
}

.emotion-4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  line-height: inherit;
  margin: 0px;
  outline: none;
  padding: 0px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-0 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  margin: -1px;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
  border-radius: 10px;
}

<label
    class="emotion-4"
    data-disabled="false"
  >
    <input
      class="emotion-0"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="emotion-2"
      data-checked="false"
      data-disabled="false"
      data-focused="false"
      data-invalid="false"
      data-readonly="false"
    >
      <svg
        class="emotion-1"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
    ​ 
    <span
      class="emotion-3"
      data-hidden="false"
    >
      test
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox is extendable by CheckboxLabel face 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-0 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  margin: -1px;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: rgb(209,209,209);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-transition: all 150ms;
  transition: all 150ms;
  border-color: rgb(0,0,255);
  border-radius: 3px;
  border-style: solid;
  border-width: 2px;
  margin-right: 8px;
}

.emotion-2[data-checked="true"] {
  background-color: light-blue;
  color: rgb(255,255,255);
  border-color: light-blue;
}

.emotion-2[data-checked="true"] > svg {
  visibility: visible;
}

.emotion-2[data-checked="false"] > svg {
  visibility: hidden;
}

.emotion-2[data-invalid="true"] {
  border-color: rgb(255,0,0);
}

.emotion-2[data-invalid="true"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(255,0,0);
}

.emotion-2[data-invalid="false"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(0,0,255);
}

.emotion-1 {
  width: 1em;
  height: 1em;
  stroke: rgb(209,209,209);
  stroke-width: 2px;
  fill: none;
}

.emotion-3 {
  font-size: inherit;
  line-height: inherit;
}

.emotion-4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  line-height: inherit;
  margin: 0px;
  outline: none;
  padding: 0px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  border-radius: 10px;
}

<label
    class="emotion-4"
    data-disabled="false"
  >
    <input
      class="emotion-0"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="emotion-2"
      data-checked="false"
      data-disabled="false"
      data-focused="false"
      data-invalid="false"
      data-readonly="false"
    >
      <svg
        class="emotion-1"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
    ​ 
    <span
      class="emotion-3"
      data-hidden="false"
    >
      test
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox is extendable by CheckboxLabelText face 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-0 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  margin: -1px;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: rgb(209,209,209);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-transition: all 150ms;
  transition: all 150ms;
  border-color: rgb(0,0,255);
  border-radius: 3px;
  border-style: solid;
  border-width: 2px;
  margin-right: 8px;
}

.emotion-2[data-checked="true"] {
  background-color: light-blue;
  color: rgb(255,255,255);
  border-color: light-blue;
}

.emotion-2[data-checked="true"] > svg {
  visibility: visible;
}

.emotion-2[data-checked="false"] > svg {
  visibility: hidden;
}

.emotion-2[data-invalid="true"] {
  border-color: rgb(255,0,0);
}

.emotion-2[data-invalid="true"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(255,0,0);
}

.emotion-2[data-invalid="false"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(0,0,255);
}

.emotion-1 {
  width: 1em;
  height: 1em;
  stroke: rgb(209,209,209);
  stroke-width: 2px;
  fill: none;
}

.emotion-4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  line-height: inherit;
  margin: 0px;
  outline: none;
  padding: 0px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-3 {
  font-size: inherit;
  line-height: inherit;
  border-radius: 10px;
}

<label
    class="emotion-4"
    data-disabled="false"
  >
    <input
      class="emotion-0"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="emotion-2"
      data-checked="false"
      data-disabled="false"
      data-focused="false"
      data-invalid="false"
      data-readonly="false"
    >
      <svg
        class="emotion-1"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
    ​ 
    <span
      class="emotion-3"
      data-hidden="false"
    >
      test
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox is extendable by CheckboxToggler face 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-0 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  margin: -1px;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-1 {
  width: 1em;
  height: 1em;
  stroke: rgb(209,209,209);
  stroke-width: 2px;
  fill: none;
}

.emotion-3 {
  font-size: inherit;
  line-height: inherit;
}

.emotion-4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  line-height: inherit;
  margin: 0px;
  outline: none;
  padding: 0px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: rgb(209,209,209);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-transition: all 150ms;
  transition: all 150ms;
  border-color: rgb(0,0,255);
  border-radius: 10px;
  border-style: solid;
  border-width: 2px;
  margin-right: 8px;
}

.emotion-2[data-checked="true"] {
  background-color: light-blue;
  color: rgb(255,255,255);
  border-color: light-blue;
}

.emotion-2[data-checked="true"] > svg {
  visibility: visible;
}

.emotion-2[data-checked="false"] > svg {
  visibility: hidden;
}

.emotion-2[data-invalid="true"] {
  border-color: rgb(255,0,0);
}

.emotion-2[data-invalid="true"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(255,0,0);
}

.emotion-2[data-invalid="false"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(0,0,255);
}

<label
    class="emotion-4"
    data-disabled="false"
  >
    <input
      class="emotion-0"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="emotion-2"
      data-checked="false"
      data-disabled="false"
      data-focused="false"
      data-invalid="false"
      data-readonly="false"
    >
      <svg
        class="emotion-1"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
    ​ 
    <span
      class="emotion-3"
      data-hidden="false"
    >
      test
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox is extendable by styles 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-0 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  margin: -1px;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: rgb(209,209,209);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-transition: all 150ms;
  transition: all 150ms;
  border-color: rgb(0,0,255);
  border-radius: 3px;
  border-style: solid;
  border-width: 2px;
  margin-right: 8px;
}

.emotion-2[data-checked="true"] {
  background-color: light-blue;
  color: rgb(255,255,255);
  border-color: light-blue;
}

.emotion-2[data-checked="true"] > svg {
  visibility: visible;
}

.emotion-2[data-checked="false"] > svg {
  visibility: hidden;
}

.emotion-2[data-invalid="true"] {
  border-color: rgb(255,0,0);
}

.emotion-2[data-invalid="true"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(255,0,0);
}

.emotion-2[data-invalid="false"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(0,0,255);
}

.emotion-1 {
  width: 1em;
  height: 1em;
  stroke: rgb(209,209,209);
  stroke-width: 2px;
  fill: none;
}

.emotion-3 {
  font-size: inherit;
  line-height: inherit;
}

.emotion-4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  line-height: inherit;
  margin: 0px;
  outline: none;
  padding: 0px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: rgb(255,192,203);
}

<label
    class="emotion-4"
    data-disabled="false"
  >
    <input
      class="emotion-0"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="emotion-2"
      data-checked="false"
      data-disabled="false"
      data-focused="false"
      data-invalid="false"
      data-readonly="false"
    >
      <svg
        class="emotion-1"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
    ​ 
    <span
      class="emotion-3"
      data-hidden="false"
    >
      test
    </span>
  </label>
</DocumentFragment>
`;

exports[`Checkbox renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  z-index: 600;
}

<div
    aria-live="polite"
    class="emotion-0"
    data-toastmanager="true"
  />
  .emotion-0 {
  border: 0;
  -webkit-clip: rect(0,0,0,0);
  clip: rect(0,0,0,0);
  height: 1px;
  overflow: hidden;
  margin: -1px;
  padding: 0px;
  position: absolute;
  white-space: nowrap;
  width: 1px;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  background-color: rgb(209,209,209);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-transition: all 150ms;
  transition: all 150ms;
  border-color: rgb(0,0,255);
  border-radius: 3px;
  border-style: solid;
  border-width: 2px;
  margin-right: 8px;
}

.emotion-2[data-checked="true"] {
  background-color: light-blue;
  color: rgb(255,255,255);
  border-color: light-blue;
}

.emotion-2[data-checked="true"] > svg {
  visibility: visible;
}

.emotion-2[data-checked="false"] > svg {
  visibility: hidden;
}

.emotion-2[data-invalid="true"] {
  border-color: rgb(255,0,0);
}

.emotion-2[data-invalid="true"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(255,0,0);
}

.emotion-2[data-invalid="false"][data-focused="true"] {
  box-shadow: 0 0 0 4px rgba(255,255,255,0.4),0 0 0 4px rgb(0,0,255);
}

.emotion-1 {
  width: 1em;
  height: 1em;
  stroke: rgb(209,209,209);
  stroke-width: 2px;
  fill: none;
}

.emotion-3 {
  font-size: inherit;
  line-height: inherit;
}

.emotion-4 {
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  font-size: inherit;
  line-height: inherit;
  margin: 0px;
  outline: none;
  padding: 0px;
  position: relative;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

<label
    class="emotion-4"
    data-disabled="false"
  >
    <input
      class="emotion-0"
      type="checkbox"
    />
    <div
      aria-hidden="true"
      class="emotion-2"
      data-checked="false"
      data-disabled="false"
      data-focused="false"
      data-invalid="false"
      data-readonly="false"
    >
      <svg
        class="emotion-1"
        viewBox="0 0 24 24"
      >
        <polyline
          points="20 6 9 17 4 12"
        />
      </svg>
    </div>
    ​ 
    <span
      class="emotion-3"
      data-hidden="false"
    >
      Required label
    </span>
  </label>
</DocumentFragment>
`;
